# com-etzhayyim-todoke

./: CLAUDE.md  README.md  actor.edn  dependencies.edn  identity.edn  lexicon-projection.edn  manifest.edn  manifest.jsonld  migration.edn  repository-contracts.edn  run_tests.clj  run_tests.sh  schema.edn
.well-known/: did.json
adr/: standalone-multirepo.edn
cells/: autonomous_run.edn  handoff_proof.edn  parcel_intake.edn  route_sequencing.edn  telemetry_log.edn
cells/handoff_proof/: state_machine.cljc  test_state_machine.cljc
cells/route_sequencing/: state_machine.cljc
contracts/lexicons/: deliveryJob.edn  handoffProof.edn  lastMileRoute.edn  missionCompleteRecord.edn  safetyAlert.edn
data/: fleet.kotoba.edn
kotoba/: schema.edn  seed.edn
lex/: deliveryJob.edn  handoffProof.edn  lastMileRoute.edn  missionCompleteRecord.edn  safetyAlert.edn
methods/: last_mile.cljc  publish.bb  test_charter_gates.cljc  test_last_mile.cljc  test_last_mile_parity.clj
route/: Cargo.toml
route/examples/: curb_to_door.rs
route/src/: lib.rs  sim.rs
src/todoke/: murakumo.cljc
src/todoke/cells/social_post/: state_machine.cljc
src/todoke/methods/: last_mile.cljc  social.cljc
test/todoke/: murakumo_test.cljc  repository_contract_test.clj
test/todoke/cells/route_sequencing/: test_state_machine.cljc
test/todoke/methods/: test_charter_gates.cljc  test_last_mile.cljc  test_last_mile_parity.clj
wire/lexicons/: deliveryJob.json  handoffProof.json  lastMileRoute.json  missionCompleteRecord.json  safetyAlert.json
